tests/baselines/reference/arithmeticOnInvalidTypes.errors.txt
==== tests/cases/compiler/arithmeticOnInvalidTypes.ts (7 errors) ====
    var x: Number;
    var y: Number;
    var z = x + y;
            ~
!!! error TS2111: Invalid '+' expression - types not known to support the addition operator.
    var z2 = x - y;
             ~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                 ~
!!! error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var z3 = x * y;
             ~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                 ~
!!! error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    var z4 = x / y;
             ~
!!! error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                 ~
!!! error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.